--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mypy = "^1.2.0"
 pytest = "^7.3.0"
 black = "^23.3.0"
 pytest-cases = "^3.6.14"
+pre-commit = "^3.2.2"
 
 [build-system]
 requires = ["poetry-core"]
