--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest = "^7.3.0"
 black = "^23.3.0"
 pytest-cases = "^3.6.14"
 pre-commit = "^3.2.2"
+pylint = "^2.17.2"
 
 [build-system]
 requires = ["poetry-core"]
