Add attack lookup for squares
To keep requirements for generating moves for a pawn low, I
removed en passant from psuedo-legal move generation. The idea
is that a higher level class (Board?) can keep track of that and
alert the move generator when it's looking for all legal moves.

--- a/.pylintrc
+++ b/.pylintrc
@@ -3,7 +3,10 @@
 init-hook='import sys; sys.setrecursionlimit(5000)'
 
 [MESSAGES CONTROL]
-disable = missing-class-docstring, missing-function-docstring, missing-module-docstring
+disable=missing-class-docstring, missing-function-docstring, missing-module-docstring
+
+[BASIC]
+good-names = by
 
 [DESIGN]
 max-args = 10
