--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
         types: [python]
       - id: mypy
         name: mypy
-        entry: black
+        entry: mypy 
         language: system
         types: [python]
       - id: pylint
