--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,11 @@ repos:
         entry: black
         language: system
         types: [python]
+      - id: isort 
+        name: isort
+        entry: isort
+        language: system
+        types: [python]
       - id: mypy
         name: mypy
         entry: mypy 
