--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[tool.isort]
+profile = "black"
+
 [tool.poetry]
 name = "pesto"
 version = "0.1.0"
@@ -15,6 +18,7 @@ black = "^23.3.0"
 pytest-cases = "^3.6.14"
 pre-commit = "^3.2.2"
 pylint = "^2.17.2"
+isort = "^5.12.0"
 
 [build-system]
 requires = ["poetry-core"]
