Add King bitboard movements

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,12 @@ target_include_directories(
     board PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+add_library(
+    piece 
+    piece.cpp
+)
+target_include_directories(
+    piece PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+)
