Add generalized make move function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,16 @@ target_include_directories(
 )
 
 add_library(
+    move 
+    move.cpp
+    piece.cpp
+)
+target_include_directories(
+    move PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+add_library(
     piece 
     piece.cpp
 )
