Add support for FEN translation
Updates the `Board` class to hold the basic needed components
to convert to and from FEN strings. Some of the file organization
will likely need to be reorganized but I'm planning on holding
off on that until the `Board` object is more fleshed out.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,21 @@
 add_library(
     board 
     board.cpp
+    collections.cpp
+    fen.cpp
 )
 target_include_directories(
     board PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+add_library(
+    fen
+    fen.cpp
+    collections.cpp
+)
+target_include_directories(
+    fen PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
