--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,16 @@ target_link_libraries(
 )
 
 add_executable(
+  legal_test
+  legal_test.cpp
+)
+target_link_libraries(
+  legal_test
+  legal
+  GTest::gtest_main
+)
+
+add_executable(
   move_test
   move_test.cpp
 )
@@ -51,5 +61,6 @@ target_link_libraries(
 include(GoogleTest)
 gtest_discover_tests(board_test)
 gtest_discover_tests(fen_test)
+gtest_discover_tests(legal_test)
 gtest_discover_tests(move_test)
 gtest_discover_tests(piece_test)
